# swc-plugin-prop-name-reverse

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: node-integration.yml
src/: lib.rs  reverse.rs
tests/: fixture.rs  integration.test.ts
tests/fixture/: README.md
tests/fixture/computed/: output.js
tests/fixture/ident/: input.ts  output.js
tests/fixture/num/: input.ts  output.js
tests/fixture/str/: input.ts  output.js
