[package]
name = "swc-plugin-object-property-reverse"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See https://swc.rs/docs/plugin/publishing#adjusting-configuration-for-smaller-binary
[profile.release]
lto = true

[dependencies]
serde = "1"
swc_core = { version = "0.74.*", features = ["ecma_plugin_transform"] }
thiserror = "1.0.40"

[dev-dependencies]
swc_core = { version = "0.74.*", features = ["testing_transform", "ecma_parser"] }
testing = "0.32.5"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
